--- a/index.html
+++ b/index.html
@@ -7,12 +7,191 @@
     </head>
     <body>
         <!-- Поле для фильтрации по городу -->
-        <input
-            type="text"
-            placeholder="Город отправления"
-            value=""
-            onkeyup="this.setAttribute('value', this.value)">
-
-        <!-- Здесь применять вашу самую сильную магию -->
+        <h1>Табло рейсов Шереметьево</h1>
+        <table>
+            <thead>
+                <tr>
+                    <th>тип рейса</th>
+                    <th>номер рейса</th>
+                    <th>авиакомпания</th>
+                    <th></th>
+                    <th>тип В/С</th>
+                    <th>аэропорт назначения</th>
+                    <th>плановое время вылета/прилёта</th>
+                    <th>номер терминала</th>
+                    <th>статус рейса</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/departing_ayt.png"></td>
+                    <td>N4-8820</td>
+                    <td>Nord Wind</td>
+                    <td><img src="http://www.koltsovo.ru/attels/logo4site/1411.gif"></td>
+                    <td>B-767-300</td>
+                    <td>ШАРМ ЭЛЬ ШЕЙХ</td>
+                    <td>20:51</td>
+                    <td>D</td>
+                    <td>Вылетел</td>
+                </tr>
+                <tr>
+                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/departing_ayt.png"></td>
+                    <td>7R-822</td>
+                    <td>Rusline</td>
+                    <td><img src="http://www.koltsovo.ru/attels/logo4site/382.gif"></td>
+                    <td>CRJ-100</td>
+                    <td>КРАСНОЯРСК</td>
+                    <td>20:56</td>
+                    <td>F</td>
+                    <td>Ожидание посадки</td>
+                </tr>
+                <tr>
+                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/arriving_ayt.png"></td>
+                    <td>U6-224</td>
+                    <td>Ural Airlines</td>
+                    <td><img src="http://www.koltsovo.ru/attels/logo4site/416.gif"></td>
+                    <td>А-319</td>
+                    <td>С-ПЕТЕРБУРГ</td>
+                    <td>22:37</td>
+                    <td>А</td>
+                    <td>Летит</td>
+                </tr>
+                <tr>
+                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/arriving_ayt.png"></td>
+                    <td>DP-407</td>
+                    <td>ПОБЕДА</td>
+                    <td class="first"><img src="http://www.koltsovo.ru/attels/logo4site/4831.gif"></td>
+                    <td>B-737-800W</td>
+                    <td>МОСКВА/ВНК</td>
+                    <td>22:40</td>
+                    <td>G</td>
+                    <td>Приземлился</td>
+                </tr>
+                <tr>
+                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/arriving_ayt.png"></td>
+                    <td>UN-9820</td>
+                    <td>ТРАНСАЭРО</td>
+                    <td class="first"><img src="http://www.koltsovo.ru/attels/logo4site/429.gif"></td>
+                    <td>B-737-500</td>
+                    <td>ЛАРНАКА</td>
+                    <td>01:05</td>
+                    <td>D</td>
+                    <td>Отменен</td>
+                </tr>
+                <tr>
+                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/departing_ayt.png"></td>
+                    <td>AF-4906</td>
+                    <td>AIRFRANCE</td>
+                    <td class="first"><img src="http://www.koltsovo.ru/attels/logo4site/2251.gif"></td>
+                    <td>A-321</td>
+                    <td>МОСКВА/ШРМ</td>
+                    <td>01:20</td>
+                    <td>C</td>
+                    <td>
+                        Отменен
+                        <img src="http://im1.asset.yvimg.kz/userimages/niyazov/Bc59OyMFbOVfLGlmE7xiufZN97O4Wd.png" width="30">
+                    </td>
+                </tr>
+                <tr>
+                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/arriving_ayt.png"></td>
+                    <td>U6-316</td>
+                    <td>Ural Airlines</td>
+                    <td><img src="http://www.koltsovo.ru/attels/logo4site/416.gif"></td>
+                    <td>А-319</td>
+                    <td>КРАСНОДАР</td>
+                    <td>01:25</td>
+                    <td>А</td>
+                    <td>Летит</td>
+                </tr>
+                <tr>
+                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/departing_ayt.png"></td>
+                    <td>SU-5318</td>
+                    <td>АЭРОФЛОТ</td>
+                    <td><img src="http://www.koltsovo.ru/attels/logo4site/397.gif"></td>
+                    <td>А-321</td>
+                    <td>МОСКВА/ШРМ</td>
+                    <td>01:40</td>
+                    <td>B</td>
+                    <td>Посадка закончена</td>
+                </tr>
+                <tr>
+                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/arriving_ayt.png"></td>
+                    <td>KL-3214</td>
+                    <td>KLM</td>
+                    <td><img src="http://www.koltsovo.ru/attels/logo4site/116.gif"></td>
+                    <td>A-321</td>
+                    <td>ИРКУТСК</td>
+                    <td>01:45</td>
+                    <td>E</td>
+                    <td>Приземлился</td>
+                </tr>
+                <tr>
+                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/arriving_ayt.png"></td>
+                    <td>OK-5912</td>
+                    <td>Czech Airlines</td>
+                    <td><img src="http://www.koltsovo.ru/attels/logo4site/135.gif"></td>
+                    <td>A-319</td>
+                    <td>ПРАГА</td>
+                    <td>01:50</td>
+                    <td>H</td>
+                    <td>По расписанию</td>
+                </tr>
+                <tr>
+                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/arriving_ayt.png"></td>
+                    <td>U6-265</td>
+                    <td>Ural Airlines</td>
+                    <td><img src="http://www.koltsovo.ru/attels/logo4site/416.gif"></td>
+                    <td>А-320</td>
+                    <td>МОСКВА/ДМД</td>
+                    <td>02:20</td>
+                    <td>А</td>
+                    <td>Летит</td>
+                </tr>
+                <tr>
+                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/departing_ayt.png"></td>
+                    <td>D9-5318</td>
+                    <td>ДОНАВИА</td>
+                    <td><img src="http://www.koltsovo.ru/attels/logo4site/229.gif"></td>
+                    <td>А-319</td>
+                    <td>Сочи</td>
+                    <td>02:25</td>
+                    <td>С</td>
+                    <td>Ожидание посадки</td>
+                </tr>
+                <tr>
+                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/arriving_ayt.png"></td>
+                    <td>U6-265</td>
+                    <td>Ural Airlines</td>
+                    <td><img src="http://www.koltsovo.ru/attels/logo4site/416.gif"></td>
+                    <td>А-321</td>
+                    <td>ШАРМ ЭЛЬ ШЕЙХ</td>
+                    <td>02:20</td>
+                    <td>C</td>
+                    <td>По расписанию</td>
+                </tr>
+                <tr>
+                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/arriving_ayt.png"></td>
+                    <td>KL-3215</td>
+                    <td>KLM</td>
+                    <td><img src="http://www.koltsovo.ru/attels/logo4site/116.gif"></td>
+                    <td>A-321</td>
+                    <td>КАЗАНЬ</td>
+                    <td>02:40</td>
+                    <td>А</td>
+                    <td>По расписанию</td>
+                </tr>
+                <tr>
+                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/departing_ayt.png"></td>
+                    <td>N4-8822</td>
+                    <td>Nord Wind</td>
+                    <td><img src="http://www.koltsovo.ru/attels/logo4site/1411.gif"></td>
+                    <td>B-767-301</td>
+                    <td>МАГАДАН</td>
+                    <td>03:00</td>
+                    <td>С</td>
+                    <td>Вылетел</td>
+                </tr>
+            </tbody>
+        </table>
     </body>
 </html>
