--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
             </thead>
             <tbody>
                 <tr>
-                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/departing_ayt.png"></td>
+                    <td class="first">
+                        <img src="http://www.aytport.com/images/sol_menu_icon/departing_ayt.png" alt="flew">
+                    </td>
                     <td>N4-8820</td>
                     <td>Nord Wind</td>
-                    <td><img src="http://www.koltsovo.ru/attels/logo4site/1411.gif"></td>
+                    <td><img src="http://www.koltsovo.ru/attels/logo4site/1411.gif" alt="Nord Wind"></td>
                     <td>B-767-300</td>
                     <td>ШАРМ ЭЛЬ ШЕЙХ</td>
                     <td>20:51</td>
@@ -35,10 +37,12 @@
                     <td>Вылетел</td>
                 </tr>
                 <tr>
-                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/departing_ayt.png"></td>
+                    <td class="first">
+                        <img src="http://www.aytport.com/images/sol_menu_icon/departing_ayt.png" alt="flew">
+                    </td>
                     <td>7R-822</td>
                     <td>Rusline</td>
-                    <td><img src="http://www.koltsovo.ru/attels/logo4site/382.gif"></td>
+                    <td><img src="http://www.koltsovo.ru/attels/logo4site/382.gif" alt="Rusline"></td>
                     <td>CRJ-100</td>
                     <td>КРАСНОЯРСК</td>
                     <td>20:56</td>
@@ -46,10 +50,12 @@
                     <td>Ожидание посадки</td>
                 </tr>
                 <tr>
-                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/arriving_ayt.png"></td>
+                    <td class="first">
+                        <img src="http://www.aytport.com/images/sol_menu_icon/arriving_ayt.png" alt="flown">
+                    </td>
                     <td>U6-224</td>
                     <td>Ural Airlines</td>
-                    <td><img src="http://www.koltsovo.ru/attels/logo4site/416.gif"></td>
+                    <td><img src="http://www.koltsovo.ru/attels/logo4site/416.gif" alt="Ural Airlines"></td>
                     <td>А-319</td>
                     <td>С-ПЕТЕРБУРГ</td>
                     <td>22:37</td>
@@ -57,10 +63,12 @@
                     <td>Летит</td>
                 </tr>
                 <tr>
-                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/arriving_ayt.png"></td>
+                    <td class="first">
+                        <img src="http://www.aytport.com/images/sol_menu_icon/arriving_ayt.png" alt="flown">
+                    </td>
                     <td>DP-407</td>
                     <td>ПОБЕДА</td>
-                    <td class="first"><img src="http://www.koltsovo.ru/attels/logo4site/4831.gif"></td>
+                    <td><img src="http://www.koltsovo.ru/attels/logo4site/4831.gif" alt="Pobeda"></td>
                     <td>B-737-800W</td>
                     <td>МОСКВА/ВНК</td>
                     <td>22:40</td>
@@ -68,35 +76,38 @@
                     <td>Приземлился</td>
                 </tr>
                 <tr>
-                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/arriving_ayt.png"></td>
+                    <td class="first">
+                        <img src="http://www.aytport.com/images/sol_menu_icon/arriving_ayt.png" alt="flown">
+                    </td>
                     <td>UN-9820</td>
                     <td>ТРАНСАЭРО</td>
-                    <td class="first"><img src="http://www.koltsovo.ru/attels/logo4site/429.gif"></td>
+                    <td><img src="http://www.koltsovo.ru/attels/logo4site/429.gif" alt="TransAero"></td>
                     <td>B-737-500</td>
                     <td>ЛАРНАКА</td>
                     <td>01:05</td>
                     <td>D</td>
-                    <td>Отменен</td>
+                    <td>По расписанию</td>
                 </tr>
                 <tr>
-                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/departing_ayt.png"></td>
+                    <td class="first">
+                        <img src="http://www.aytport.com/images/sol_menu_icon/departing_ayt.png" alt="flew">
+                    </td>
                     <td>AF-4906</td>
                     <td>AIRFRANCE</td>
-                    <td class="first"><img src="http://www.koltsovo.ru/attels/logo4site/2251.gif"></td>
+                    <td><img src="http://www.koltsovo.ru/attels/logo4site/2251.gif" alt="AirFrance"></td>
                     <td>A-321</td>
                     <td>МОСКВА/ШРМ</td>
                     <td>01:20</td>
                     <td>C</td>
-                    <td>
-                        Отменен
-                        <img src="http://im1.asset.yvimg.kz/userimages/niyazov/Bc59OyMFbOVfLGlmE7xiufZN97O4Wd.png" width="30">
-                    </td>
+                    <td>Вылетел</td>
                 </tr>
                 <tr>
-                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/arriving_ayt.png"></td>
+                    <td class="first">
+                        <img src="http://www.aytport.com/images/sol_menu_icon/arriving_ayt.png" alt="flown">
+                    </td>
                     <td>U6-316</td>
                     <td>Ural Airlines</td>
-                    <td><img src="http://www.koltsovo.ru/attels/logo4site/416.gif"></td>
+                    <td><img src="http://www.koltsovo.ru/attels/logo4site/416.gif" alt="Ural Airlines"></td>
                     <td>А-319</td>
                     <td>КРАСНОДАР</td>
                     <td>01:25</td>
@@ -104,10 +115,12 @@
                     <td>Летит</td>
                 </tr>
                 <tr>
-                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/departing_ayt.png"></td>
+                    <td class="first">
+                        <img src="http://www.aytport.com/images/sol_menu_icon/departing_ayt.png" alt="flew">
+                    </td>
                     <td>SU-5318</td>
                     <td>АЭРОФЛОТ</td>
-                    <td><img src="http://www.koltsovo.ru/attels/logo4site/397.gif"></td>
+                    <td><img src="http://www.koltsovo.ru/attels/logo4site/397.gif" alt="Aeroflot"></td>
                     <td>А-321</td>
                     <td>МОСКВА/ШРМ</td>
                     <td>01:40</td>
@@ -115,10 +128,12 @@
                     <td>Посадка закончена</td>
                 </tr>
                 <tr>
-                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/arriving_ayt.png"></td>
+                    <td class="first">
+                        <img src="http://www.aytport.com/images/sol_menu_icon/arriving_ayt.png" alt="flown">
+                    </td>
                     <td>KL-3214</td>
                     <td>KLM</td>
-                    <td><img src="http://www.koltsovo.ru/attels/logo4site/116.gif"></td>
+                    <td><img src="http://www.koltsovo.ru/attels/logo4site/116.gif" alt="KLM"></td>
                     <td>A-321</td>
                     <td>ИРКУТСК</td>
                     <td>01:45</td>
@@ -126,10 +141,12 @@
                     <td>Приземлился</td>
                 </tr>
                 <tr>
-                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/arriving_ayt.png"></td>
+                    <td class="first">
+                        <img src="http://www.aytport.com/images/sol_menu_icon/arriving_ayt.png" alt="flown">
+                    </td>
                     <td>OK-5912</td>
                     <td>Czech Airlines</td>
-                    <td><img src="http://www.koltsovo.ru/attels/logo4site/135.gif"></td>
+                    <td><img src="http://www.koltsovo.ru/attels/logo4site/135.gif" alt="Czech Airlines"></td>
                     <td>A-319</td>
                     <td>ПРАГА</td>
                     <td>01:50</td>
@@ -137,10 +154,12 @@
                     <td>По расписанию</td>
                 </tr>
                 <tr>
-                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/arriving_ayt.png"></td>
+                    <td class="first">
+                        <img src="http://www.aytport.com/images/sol_menu_icon/arriving_ayt.png" alt="flown">
+                    </td>
                     <td>U6-265</td>
                     <td>Ural Airlines</td>
-                    <td><img src="http://www.koltsovo.ru/attels/logo4site/416.gif"></td>
+                    <td><img src="http://www.koltsovo.ru/attels/logo4site/416.gif" alt="Ural Airlines"></td>
                     <td>А-320</td>
                     <td>МОСКВА/ДМД</td>
                     <td>02:20</td>
@@ -148,10 +167,12 @@
                     <td>Летит</td>
                 </tr>
                 <tr>
-                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/departing_ayt.png"></td>
+                    <td class="first">
+                        <img src="http://www.aytport.com/images/sol_menu_icon/departing_ayt.png" alt="flew">
+                    </td>
                     <td>D9-5318</td>
                     <td>ДОНАВИА</td>
-                    <td><img src="http://www.koltsovo.ru/attels/logo4site/229.gif"></td>
+                    <td><img src="http://www.koltsovo.ru/attels/logo4site/229.gif" alt="DonAvia"></td>
                     <td>А-319</td>
                     <td>Сочи</td>
                     <td>02:25</td>
@@ -159,10 +180,12 @@
                     <td>Ожидание посадки</td>
                 </tr>
                 <tr>
-                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/arriving_ayt.png"></td>
+                    <td class="first">
+                        <img src="http://www.aytport.com/images/sol_menu_icon/arriving_ayt.png" alt="flown">
+                    </td>
                     <td>U6-265</td>
                     <td>Ural Airlines</td>
-                    <td><img src="http://www.koltsovo.ru/attels/logo4site/416.gif"></td>
+                    <td><img src="http://www.koltsovo.ru/attels/logo4site/416.gif" alt="Ural Airlines"></td>
                     <td>А-321</td>
                     <td>ШАРМ ЭЛЬ ШЕЙХ</td>
                     <td>02:20</td>
@@ -170,10 +193,12 @@
                     <td>По расписанию</td>
                 </tr>
                 <tr>
-                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/arriving_ayt.png"></td>
+                    <td class="first">
+                        <img src="http://www.aytport.com/images/sol_menu_icon/arriving_ayt.png" alt="flown">
+                    </td>
                     <td>KL-3215</td>
                     <td>KLM</td>
-                    <td><img src="http://www.koltsovo.ru/attels/logo4site/116.gif"></td>
+                    <td><img src="http://www.koltsovo.ru/attels/logo4site/116.gif" alt="KLM"></td>
                     <td>A-321</td>
                     <td>КАЗАНЬ</td>
                     <td>02:40</td>
@@ -181,10 +206,12 @@
                     <td>По расписанию</td>
                 </tr>
                 <tr>
-                    <td class="first"><img src="http://www.aytport.com/images/sol_menu_icon/departing_ayt.png"></td>
+                    <td class="first">
+                        <img src="http://www.aytport.com/images/sol_menu_icon/departing_ayt.png" alt="flew">
+                    </td>
                     <td>N4-8822</td>
                     <td>Nord Wind</td>
-                    <td><img src="http://www.koltsovo.ru/attels/logo4site/1411.gif"></td>
+                    <td><img src="http://www.koltsovo.ru/attels/logo4site/1411.gif" alt="Nord Wind"></td>
                     <td>B-767-301</td>
                     <td>МАГАДАН</td>
                     <td>03:00</td>
@@ -193,5 +220,12 @@
                 </tr>
             </tbody>
         </table>
+        <form>
+                <legend>Отправить данные на телефон</legend>
+                <input id="email" name="email" type="email" placeholder="Email example#ya.ru" required><br>
+                <input id="phone" name="phone" type="phone" placeholder="Phone 89238748833"
+                pattern="^(\+7|8)\d{10}$" required><br>
+                <button type="submit">Отправить</button>
+        </form>
     </body>
 </html>
